--- a/cmd/http/utils/resource/template/song/song_details.gohtml
+++ b/cmd/http/utils/resource/template/song/song_details.gohtml
@@ -7,7 +7,7 @@
                 <div class="card song-details-card">
                     <div class="card-header">
                         <h2 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; {{ .Data.Artist }}
-                            - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="" data-toggle="tooltip"
+                            - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="/song/{{ .Data.ID }}/edit" data-toggle="tooltip"
                                                                                       title="Edit"><i
                                         class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i>
                             </a> {{end}}</h2>
@@ -55,19 +55,6 @@
                     <div class="comments-section">
                         <h3 class="comments-title">Comments:</h3>
                         <div class="comments">
-{{/*                            {{ range .Data.Comments }}*/}}
-{{/*                                <div class="comment-bubble">*/}}
-{{/*                                    <p class="comment-author"><span class="text-yellow">{{ .Author }}</span> says:*/}}
-{{/*                                        {{if eq .CanEdit true}}*/}}
-{{/*                                            <a href="" data-toggle="tooltip" title="Edit"><i*/}}
-{{/*                                                        class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i></a>*/}}
-{{/*                                        {{end}}*/}}
-{{/*                                    </p>*/}}
-{{/*                                    <p class="comment-content">{{ .Content }}</p>*/}}
-{{/*                                    <p class="comment-date">{{ .CreatedAt }}</p>*/}}
-{{/*                                </div>*/}}
-{{/*                            {{ end }}*/}}
-
                             {{ range .Data.Comments }}
                                 <div class="comment-bubble">
                                     <p class="comment-author">
