- replaced sqlite3 driver with one that is a pure golang implementation

--- a/cmd/http/utils/resource/template/base/base.gohtml
+++ b/cmd/http/utils/resource/template/base/base.gohtml
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {{ template "base_styles" .}}
         {{ template "additional_styles" .}}
-        <title>Music template!</title>
+        <title>FFXIV-Bard</title>
     </head>
     <body>
     <!--navbar-->
