- optimized asset loading - added new fields and filters - some front-end changes

--- a/cmd/http/utils/resource/css/song_add.css
+++ b/cmd/http/utils/resource/css/song_add.css
@@ -29,3 +29,13 @@ button.btn.btn-dark {
     margin-left: auto;
     margin-right: auto;
 }
+
+.form-control {
+    margin-bottom: 6px;
+}
+.form-select {
+    margin-bottom: 6px;
+}
+label {
+    margin-bottom: 4px;
+}
