--- a/cmd/http/utils/resource/template/song/add_song.gohtml
+++ b/cmd/http/utils/resource/template/song/add_song.gohtml
@@ -6,14 +6,24 @@
                 <form action="/song" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="title">Title:</label>
-                        <input type="text" class="form-control" id="title" name="title" required>
+                        <input type="text" class="form-control" id="title" name="title" placeholder="The song title" required>
                     </div>
                     <div class="form-group">
                         <label for="artist">Artist:</label>
-                        <input type="text" class="form-control" id="artist" name="artist" required>
+                        <input type="text" class="form-control" id="artist" name="artist" placeholder="The artist that performs the song" required>
                     </div>
                     <div class="form-group">
-                        <label for="ensembleSize">Ensemble size:</label>
+                        <label for="crafter"><i class="fa fa-question-circle" data-toggle="tooltip" title="Enter the name of the individual or group credited with creating the MIDI arrangement for the song." aria-hidden="true"></i> Crafter:
+                        </label>
+                        <input type="text" class="form-control" id="crafter" name="crafter" placeholder="Name of the MIDI crafter">
+                    </div>
+                    <div class="form-group">
+                        <label for="source"><i class="fa fa-question-circle" data-toggle="tooltip" title="Source: Arrangement, MIDI, or Transcription Reference" aria-hidden="true"></i> Source:
+                        </label>
+                        <input type="text" class="form-control" id="source" name="source" placeholder="Source">
+                    </div>
+                    <div class="form-group">
+                        <label for="ensembleSize">Ensemble size (select):</label>
                         <select class="form-control" id="ensembleSize" name="ensembleSize" required>
                             {{ range $id, $value := .Data.EnsembleSize }}
                                 <option value={{ $id }}>{{ $value }}</option>
@@ -28,6 +38,19 @@
                                 <option value="{{$element.ID}}">{{$element.Name}}</option>
                             {{ end }}
                         </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="instrument multiple-select-clear-field">Select instruments (multiselect):</label>
+                        <select class="form-select" name="instrument" id="instrument multiple-select-clear-field"
+                                data-placeholder="Choose anything" multiple required>
+                            {{range $element := .Data.Instruments}}
+                                <option value="{{$element.ID}}">{{$element.Name}}</option>
+                            {{ end }}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="note">Add a note</label>
+                        <textarea class="form-control" name="note" id="note" maxlength="150" placeholder="Add a note..."></textarea>
                     </div>
                     <div class="form-group">
                         <label for="formFile" class="form-label">Upload</label>
