--- a/cmd/http/utils/resource/template/song/song_details.gohtml
+++ b/cmd/http/utils/resource/template/song/song_details.gohtml
@@ -6,24 +6,40 @@
             <div class="header">
                 <div class="card song-details-card">
                     <div class="card-header">
-                        <h2 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; {{ .Data.Artist }}
+                        <h3 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; <span class="artist-name">{{ .Data.Artist }}</span>
                             - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="/song/{{ .Data.ID }}/edit" data-toggle="tooltip"
                                                                                       title="Edit"><i
                                         class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i>
-                            </a> {{end}}</h2>
+                            </a> {{end}}</h3>
                     </div>
                     <div class="card-body">
-                        <p class="card-text"><span
-                                    class="card-label text-yellow"><strong>Artist:</strong></span> {{ .Data.Artist }}</p>
-                        <p class="card-text"><span class="card-label text-yellow"><strong>Title:</strong></span> {{ .Data.Title }}
-                        </p>
-                        <p class="card-text"><span
-                                    class="card-label text-yellow"><strong>Ensemble Size:</strong></span> {{ .Data.EnsembleSizeString }}
-                        </p>
-                        <p class="card-text"><span
-                                    class="card-label text-yellow"><strong>Genre:</strong></span> {{ range .Data.Genre }}{{ .Name }}{{ end }}
+                        <p class="card-text"><span class="card-label text-yellow"><strong>Title:</strong></span> {{ .Data.Title }}</p>
+                        <p class="card-text"><span class="card-label text-yellow"><strong>Artist:</strong></span> {{ .Data.Artist }}</p>
+                        <p class="card-text"><span class="card-label text-yellow"><strong>Crafter:</strong></span> {{ .Data.AudioCrafter }}</p>
+                        <p class="card-text">
+                            <span class="card-label text-yellow"><strong>Source:</strong></span>
+                            {{ $source := .Data.Source }}
+                            {{ if and (ge (len $source) 4) (eq (slice $source 0 4) "http") }}
+                                <a href="{{ $source }}" target="_blank">{{ $source }}</a>
+                            {{ else }}
+                                {{ $source }}
+                            {{ end }}
                         </p>
 
+                        <p class="card-text"><span class="card-label text-yellow"><strong>Ensemble Size:</strong></span> {{ .Data.EnsembleSizeString }}</p>
+                        <p class="card-text">
+                            <span class="card-label text-yellow"><strong>Genre:</strong></span>
+                            {{ range $index, $element := .Data.Genre }}
+                                {{ if $index }}, {{ end }}{{ $element.Name }}
+                            {{ end }}
+                        </p>
+                        <p class="card-text">
+                            <span class="card-label text-yellow"><strong>Instrument:</strong></span>
+                            {{ range $index, $element := .Data.Instrument }}
+                                {{ if $index }}, {{ end }}{{ $element.Name }}
+                            {{ end }}
+                        </p>
+                        <p class="card-text"><span class="card-label text-yellow"><strong>Note:</strong></span> {{ .Data.Note }}</p>
                         <div class="card-text star-rating">
                             <span class="card-label text-yellow"><strong>Rating:</strong></span>
                             <span class="rating-value">{{ .Data.Rating }}</span>
