--- a/cmd/http/utils/resource/css/audio_player.css
+++ b/cmd/http/utils/resource/css/audio_player.css
@@ -1,6 +1,7 @@
 #section3 midi-player {
     display: block;
     width: 100%;
+    margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4px;
