--- a/cmd/http/utils/resource/template/base/base_js.gohtml
+++ b/cmd/http/utils/resource/template/base/base_js.gohtml
@@ -6,10 +6,19 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 <script>
+// $(document).ready(function() {
+//     $(function () {
+//         $('[data-toggle="tooltip"]').tooltip()
+//     })});
+// $(function () {
+//     $('[data-toggle="tooltip"]').tooltip();
+// });
 $(document).ready(function() {
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })});
+    $('[data-toggle="tooltip"]').tooltip();
+});
+$(document).on('mouseenter', '[data-toggle="tooltip"]', function(){
+    $(this).tooltip('show');
+});
 </script>
 
 
