- some visual changes

--- a/cmd/http/utils/resource/template/song/song_details_css.gohtml
+++ b/cmd/http/utils/resource/template/song/song_details_css.gohtml
@@ -1,4 +1,4 @@
 {{define "additional_styles"}}
-    <link rel="stylesheet" href="/_resource/css/song_details.css">
-    <link rel="stylesheet" href="/_resource/css/audio_player.css">
+    <link rel="stylesheet" href="/_resource/css/song_details.css?v=1">
+    <link rel="stylesheet" href="/_resource/css/audio_player.css?v=1">
 {{ end }}
