--- a/cmd/http/utils/resource/template/song/list_css.gohtml
+++ b/cmd/http/utils/resource/template/song/list_css.gohtml
@@ -1,4 +1,4 @@
 {{define "additional_styles"}}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/_resource/css/song_list.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.2/dist/bootstrap-table.min.css?v=1" rel="stylesheet">
+    <link rel="stylesheet" href="/_resource/css/song_list.css?v=1">
 {{ end }}
