--- a/cmd/http/utils/resource/template/song/song_details.gohtml
+++ b/cmd/http/utils/resource/template/song/song_details.gohtml
@@ -6,7 +6,7 @@
             <div class="header">
                 <div class="card song-details-card">
                     <div class="card-header">
-                        <h3 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; <span class="artist-name">{{ .Data.Artist }}</span>
+                        <h3 class="card-title"><i class="fa fa-music music-icon" aria-hidden="true"></i> &nbsp; <span class="artist-name">{{ .Data.Artist }}</span>
                             - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="/song/{{ .Data.ID }}/edit" data-toggle="tooltip"
                                                                                       title="Edit"><i
                                         class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i>
